fix benchmark and code to work on x86.
Ran into trouble with constant propagation trying to make the
MethodHandle decision tree in java more complex. It meant 20x slowdown.

We may want to this different, but just get it hobbling for now. Java
statically computes methodhandle of "best" C function.

You may now compile the code on any architecture/compiler and see the
difference between vectorized java code and generic optimized C code at
the least.

If we add more implementations with intrinsics that beat the compiler,
it may return a faster result.